Fix display of icons referenced from non `icon-` styles  - replace direct usages of character codepoint with variables  - fix $font-icon variable value and use it everywhere we set the icon font-family  - Adjust margin-top on .flash__message .flash--error because the warning icon was appearing too high with new icon set  - Set visited color on flash message dismiss button so it doesn't change color once it has been "visited"

--- a/app/assets/stylesheets/atoms/_form-elements.scss
+++ b/app/assets/stylesheets/atoms/_form-elements.scss
@@ -136,7 +136,7 @@ label {
       &:before {
         font-family: $font-icon;
         font-size: $font-size-25-small;
-        content: '\e5ca';
+        content: map_get($icons, check);
         display: inline-block;
         position: absolute;
         top: -5px;
@@ -187,7 +187,7 @@ label {
     display: block;
     font-family: $font-icon;
     font-size: $font-size-35;
-    content: '\e5c5';
+    content: map_get($icons, arrow_drop_down);
     color: $color-grey-darkest;
     border-left: 0;
     width: $s60;
